[tool.poetry]
name = "dao-openapi"
version = "0.1.0"
description = "building all daocloud enterprise 5.0 module openapi docs."
authors = ["samzong.lu <samzong.lu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.4.2"
mkdocs-swagger-ui-tag = "^0.6.1"
mkdocs-material = "^9.1.8"
mkdocs-minify-plugin = "^0.6.4"
mkdocs-redirects = "^1.2.0"
mkdocs-git-revision-date-plugin = "^0.3.2"
mkdocs-git-revision-date-localized-plugin = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
